--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,57 +3,94 @@
 .navbar{
   width: 100%;
   height: 70px;
-  background-color:$mainColor;
-  color: #D1e8E2;
+  background-color:$mainBackgroundColor;
+  color: $mainTextColor;
   position: fixed;
   top: 0;
-  z-index: 2;
-}
+  z-index: 3;
+  transition: all 2s ease;
 
-.wrapper{
-  padding: 10px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  .left{
+  .wrapper{
+    padding: 10px 30px;
     display: flex;
     align-items: center;
-    margin-right: 40px;
-
-    .icon{
-      color: #D1e8E2;
+    justify-content: space-between;
+  
+    .left{
       display: flex;
       align-items: center;
-      margin-right: 5px;
-      font-size: 30px;
+      margin-right: 40px;
+  
+      .icon{
+        display: flex;
+        align-items: center;
+        margin-right: 5px;
+        font-size: 30px;
+      }
+  
+      .name{
+        display: flex;
+        align-items: center;
+        margin-right: 60px;
+        font-weight: 300;
+      }
+  
+      .logo{
+        font-weight: 500;
+        text-decoration: none;
+        color: inherit;
+        margin-right: 30px;
+        margin-left: 30px;
+        display: flex;
+        align-items: center;
+      }
+  
+      .itemContainer{
+        display: flex;
+        align-items: center;
+        margin-left: 30px;
+  
+      }
     }
-
-    .name{
-      color: #D1e8E2;
-      display: flex;
-      align-items: center;
-      margin-right: 60px;
-      font-weight: 300;
+  
+    .right{
+  
+      .hamburger{
+        width: 32px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+  
+        span{
+          width: 100%;
+          height: 3px;
+          background-color: $mainTextColor;
+          transform-origin: left;
+          transition: all 1.5s ease;
+        }
+      }
     }
+  }
 
-    .logo{
-      // font-size: 40px;
-      font-weight: 500;
-      text-decoration: none;
-      color: inherit;
-      margin-right: 30px;
-      margin-left: 30px;
-      display: flex;
-      align-items: center;
+  &.active{
+
+    .hamburger{
+      span{
+        &:first-child{
+          background-color: $mainTextColor;
+          transform: rotate(45deg)
+        }
+        &:nth-child(2){
+          opacity: 0;
+        }
+        &:last-child{
+          background: $mainTextColor;
+          transform: rotate(-45deg)
+        }
+      }
     }
-
-    .itemContainer{
-      display: flex;
-      align-items: center;
-      margin-left: 30px;
-
-    }
-
   }
 }
+
