--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,10 +1,11 @@
 @import "../../global.scss";
 
 .menu{
-  width: 300px;
+  width: 280px;
   height: 100vh;
   background-color:$mainBackgroundColor;
   color: $mainTextColor;
+  font-weight: 200;
   position: fixed;
   top: 0;
   right: -300px;
@@ -20,17 +21,23 @@
 
   ul{
     margin: 0;
-    padding: 0;
+    padding: 20px;
     list-style: none;
     font-size: 24px;
+    text-align: center;
+  
   }
 
   li{
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     a{
       font-size: inherit;
       color: inherit;
       text-decoration: none;
+    }
+
+    &:hover{
+      font-weight: 600;
     }
   }
 }
