add language and framework images to intro

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -3,8 +3,8 @@
 .menu{
   width: 280px;
   height: 100vh;
-  background-color:$mainBackgroundColor;
-  color: $mainTextColor;
+  background-color:$mainDarkColor;
+  color: $mainLightColor;
   font-weight: 200;
   position: fixed;
   top: 0;
