--- a/src/app.scss
+++ b/src/app.scss
@@ -6,7 +6,7 @@
   .sections{
     width: 100%;
     height: calc(100vh - 70px);
-    background-color: $mainBackgroundColor;
+    background-color: $mainLightColor;
     position: relative;
     top: 70px;
     scroll-behavior: smooth;
