--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,22 +1,54 @@
 @import "../../global.scss";
 
 .intro{
-  background-color: $mainTextColor;
+  background-color: $mainLightColor;
   display: flex;
-  color: $mainBackgroundColor;
+  color: $mainDarkColor;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-
+  flex-direction: column;
+  text-align: center;
   
+  h1{
+    padding: 20px;
+  }
+
   a{
     text-decoration: none;
     color: inherit;
   }
 
   .icon{
-    color: $mainBackgroundColor;
+    color: $mainDarkColor;
     font-size: 100px;
+  }
+
+  .skills{
+    flex: 66.66%;
+    background-color:orange;
+    overflow: hidden;
+
+    .imgContainer{
+      width: 10%;
+      height: 100%;
+
+      .logo{
+        margin: 5px;
+        border-style: solid;
+        border-radius: 10%;
+      }
+
+      img{
+        width: 100%;
+        height: auto;
+        padding: 10px;
+      }
+    }
+
+  }
+
+  .profiles{
+    flex: 33.33%;
+    background-color: green;
   }
 }
 
