Color scheme added

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,5 +1,6 @@
 @import "../../global.scss";
 
 .contact{
-  background-color: $mainLightColor;
+  background-color: $mainDarkColor;
+  color: $mainLightColor;
 }
