--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,5 +1,6 @@
 @import "../../global.scss";
 
 .portfolio{
-  background-color: $mainLightColor;
+  background-color: $mainDarkColor;
+  color: $mainLightColor
 }
