--- a/src/components/CV/CV.scss
+++ b/src/components/CV/CV.scss
@@ -1,5 +1,6 @@
 @import "../../global.scss";
 
 .CV{
-  background-color: $mainLightColor;
+  background-color: $mainDarkColor;
+  color: $mainLightColor
 }
