--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,7 +3,7 @@
 .navbar{
   width: 100%;
   height: 70px;
-  background-color:$mainDarkColor;
+  background-color: rgba(10, 35, 66, 1);
   color: $mainLightColor;
   position: fixed;
   top: 0;
