--- a/src/global.scss
+++ b/src/global.scss
@@ -1,2 +1,10 @@
-$mainDarkColor: #2c3531;
-$mainLightColor: #D1E8E2;
+$mainDarkColor: #0A2342;
+$mainLightColor: #FFFdF7;
+
+
+
+// background-color: rgba(13, 3, 13, 1);
+// color: #ECCE8E;
+
+// background-color: #131200;
+// color: #78BC61;
