--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
   
   h1{
     padding: 5px;
@@ -18,24 +19,6 @@
     &:hover{
       background: #2CA58D;
     }
-  }
-
-  .profile{
-    display: inline-block;
-    width: 18%;
-    text-align: center;
-    margin: 20px;
-    border-radius: 7%;
-
-    .icon{
-      color: $mainLightColor;
-      font-size: 60px;
-    }
-
-    &:hover{
-    background: #2CA58D;
-    }
-
   }
 
   .skills{
@@ -59,10 +42,13 @@
     }
 
     .imgContainer{
-      width: 40%;
+      width: 300px;
       height: 100%;
       margin-left: auto;
       margin-right: auto;
+      display: flex;
+      flex-direction: column;
+      overflow: auto;
 
       .logo{
         margin: 5px;
@@ -85,7 +71,23 @@
         }
       }
     }
-
   
+  }
+
+  .profile{
+    display: inline-block;
+    width: 10%;
+    text-align: center;
+    margin: 20px;
+    border-radius: 7%;
+
+    .icon{
+      color: $mainLightColor;
+      font-size: 60px;
+    }
+
+    &:hover{
+    background: #2CA58D;
+    }
   }
 }
