--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,15 +1,16 @@
 @import "../../global.scss";
 
-.intro{
+.about{
   background-color: $mainDarkColor;
   color: $mainLightColor;
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  
-  h1{
-    padding: 5px;
+
+  .title{
+    font-size: 30px;
+    font-weight: 600;
   }
 
   a{
@@ -21,7 +22,7 @@
     }
   }
 
-  .skills{
+  .about-me{
     background-color:inherit;
     overflow: hidden;
 
@@ -37,6 +38,7 @@
       p{
         padding: 5px;
         margin: 10px;
+        font-size: 18px;
       }
     }
 
@@ -71,22 +73,5 @@
       }
     }
   
-  }
-
-  .profile{
-    display: inline-block;
-    width: 10%;
-    text-align: center;
-    margin: 20px;
-    border-radius: 7%;
-
-    .icon{
-      color: $mainLightColor;
-      font-size: 60px;
-    }
-
-    &:hover{
-    background: #2CA58D;
-    }
   }
 }
