--- a/src/app.scss
+++ b/src/app.scss
@@ -1,12 +1,36 @@
 @import "./global.scss";
 
+html,body{
+  background-color: $mainDarkColor;
+}
+
 .app{
   height: 100vh;
+
+
+  .body-particles{
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
+  }
+
+  .particle-background{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    opacity: 0.95;
+    background-color: $mainDarkColor;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+  }
 
   .sections{
     width: 100%;
     height: calc(100vh - 70px);
-    background-color: $mainLightColor;
+    // background-color: $mainLightColor;
     position: relative;
     top: 70px;
     scroll-behavior: smooth;
