--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,4 +2,14 @@
 
 .contact{
   color: $mainLightColor;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+
+  .title{
+    font-size: 4vh;
+    font-weight: 600;
+    margin-bottom: 1vh;
+  }
 }
