--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -8,8 +8,9 @@
   justify-content: center;
 
   .title{
-    font-size: 30px;
+    font-size: 4vh;
     font-weight: 600;
+    margin-bottom: 1vh;
   }
 
   a{
@@ -23,49 +24,46 @@
 
   .about-me{
     background-color:inherit;
-    overflow: hidden;
 
     .bio{
-      margin-top: 0px;
-      margin-bottom: 10px;
+      color: inherit;
     }
 
     #about{
-      width: 80%;
-      margin-left: 10%;
       color: $mainLightColor;
       p{
-        padding: 5px;
-        margin: 10px;
-        font-size: 18px;
+        padding: 0.75vh;
+        margin: 0.5vh 10vh;
+        font-size: 2.15vh;
       }
     }
 
     .imgContainer{
-      width: 300px;
-      height: 100%;
+      width: 50vh;
+      height: 60vh;
       margin-left: auto;
       margin-right: auto;
       display: flex;
       flex-direction: column;
-      overflow: auto;
+      justify-content: center;
+      align-items: center;
 
       .logo{
-        margin: 5px;
+        margin: 0.5vh;
         border-style: solid;
         border-radius: 15%;
         border-color: #2CA58D;
         background-color: $mainDarkColor;
         color: $mainLightColor;
         // display: flex;
-        // justify-content: center;
-        // align-items: center;
+        justify-content: center;
+        align-items: center;
       }
 
       img{
-        width: 50px;
+        width: 7vh;
         height: auto;
-        padding: 10px;
+        padding: 2vh;
         align-items: center;
 
         
