--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -7,79 +7,49 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
+  overflow: hidden;
   
   h1{
-    padding: 5px;
-    font-size: 50px;
+    padding: 1vh;
+    font-size: 8vh;
     font-weight: 500;
   }
 
   h2{
-    font-size: 36px;
+    font-size: 5vh;
     font-weight: 200;
   }
 
   h3{
-    font-size: 24px;
+    font-size: 3vh;
     font-weight: 200;
   }
 
   a{
     text-decoration: none;
     color: inherit;
-
-    &:hover{
-      background: #2CA58D;
-    }
   }
 
   .skills{
     background-color:inherit;
-    overflow: hidden;
 
     .bio{
       margin-top: 0px;
-      margin-bottom: 10px;
-    }
-
-    #about{
-      width: 80%;
-      margin-left: 10%;
-      color: $mainLightColor;
-      p{
-        padding: 5px;
-        margin: 10px;
-      }
+      margin-bottom: 2vh;
     }
 
     .imgContainer{
-      width: 300px;
-      height: 100%;
       margin-left: auto;
       margin-right: auto;
       display: flex;
       flex-direction: column;
-      overflow: auto;
 
       .logo{
-        margin: 5px;
+        margin: 2vh;
         border-style: solid;
-        border-radius: 15%;
         border-color: #2CA58D;
         background-color: $mainDarkColor;
         color: $mainLightColor;
-      }
-
-      img{
-        width: 50px;
-        height: auto;
-        padding: 10px;
-        align-items: center;
-
-        
-        &:hover{
-          background: #2CA58D;
-        }
       }
     }
   
@@ -87,18 +57,31 @@
 
   .profile{
     display: inline-block;
-    width: 10%;
+    width: 15vh;
     text-align: center;
-    margin: 20px;
+    margin: 5vh;
     border-radius: 7%;
 
     .icon{
       color: $mainLightColor;
-      font-size: 60px;
+      font-size: 10vh;
     }
 
     &:hover{
     background: #2CA58D;
+    }
+  }
+
+  .arrow{
+    img{
+      width: 5vh;
+      animation: arrowBlink 2.2s infinite;
+    }
+
+    @keyframes arrowBlink {
+      100%{
+        opacity: 0;
+      }
     }
   }
 }
