--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,8 +1,8 @@
 @import "../../global.scss";
 
 .navbar{
-  width: 100%;
-  height: 70px;
+  width: 100vw;
+  height: 7vh;
   background-color: rgba(10, 35, 66, 1);
   color: $mainLightColor;
   position: fixed;
@@ -11,7 +11,7 @@
   transition: all 2s ease;
 
   .wrapper{
-    padding: 10px 30px;
+    padding: 1vh 1vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -19,19 +19,17 @@
     .left{
       display: flex;
       align-items: center;
-      margin-right: 40px;
   
       .icon{
         display: flex;
         align-items: center;
-        margin-right: 5px;
-        font-size: 30px;
+        margin-right: 0.25vw;
+        font-size: 4vh;
       }
   
       .name{
         display: flex;
         align-items: center;
-        margin-right: 60px;
         font-weight: 300;
       }
   
@@ -39,8 +37,6 @@
         font-weight: 500;
         text-decoration: none;
         color: inherit;
-        margin-right: 30px;
-        margin-left: 30px;
         display: flex;
         align-items: center;
       }
@@ -48,16 +44,15 @@
       .itemContainer{
         display: flex;
         align-items: center;
-        margin-left: 30px;
-  
       }
     }
   
     .right{
   
       .hamburger{
-        width: 32px;
-        height: 25px;
+        width: 2.5vw;
+        height: 3vh;
+        margin-right: 1vw;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -65,8 +60,8 @@
   
   
         span{
-          width: 100%;
-          height: 3px;
+          width: 3vw;
+          height: 0.33vh;
           background-color: $mainLightColor;
           transform-origin: left;
           transition: all 1.0s ease;
