--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -10,6 +10,10 @@
   z-index: 3;
   transition: all 2s ease;
 
+  p{
+    font-size: 4vh;
+  }
+
   .wrapper{
     padding: 1vh 1vw;
     display: flex;
