--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,19 +1,19 @@
 @import "../../global.scss";
 
 .menu{
-  width: 280px;
+  width: 25vw;
   height: 100vh;
   background-color:$mainDarkColor;
   color: $mainLightColor;
   font-weight: 200;
   position: fixed;
   top: 0;
-  right: -300px;
+  right: -30vw;
   z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  transition: all 0.6s ease;
+  transition: all 0.7s ease;
 
   &.active{
     right: 0;
@@ -21,15 +21,15 @@
 
   ul{
     margin: 0;
-    padding: 20px;
+    padding: 5vw;
     list-style: none;
-    font-size: 24px;
+    font-size: 3.5vh;
     text-align: center;
   
   }
 
   li{
-    margin-bottom: 25px;
+    margin-bottom: 4.5vh;
     a{
       font-size: inherit;
       color: inherit;
