--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -61,6 +61,7 @@
         flex-direction: column;
         justify-content: space-between;
         cursor: pointer;
+        overflow: hidden;
   
   
         span{
