--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -12,7 +12,7 @@
   h1{
     padding: 1vh;
     font-size: 8vh;
-    font-weight: 500;
+    font-weight: 600;
   }
 
   h2{
@@ -23,6 +23,13 @@
   h3{
     font-size: 3vh;
     font-weight: 200;
+    color: $mainDarkColor;
+
+    span{
+      font-size: inherit;
+      color: $mainLightColor;
+    
+    }
   }
 
   p{
