--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -5,12 +5,15 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: center;
+  justify-content: start;
+  
 
   .title{
     font-size: 4vh;
     font-weight: 600;
     margin-bottom: 1vh;
+    text-decoration: underline;
+    text-decoration-color: #f05f95;
   }
 
   a{
@@ -33,7 +36,7 @@
       color: $mainLightColor;
       p{
         padding: 0.75vh;
-        margin: 0.5vh 10vh;
+        margin: 0.5vh 25vh;
         font-size: 2.15vh;
       }
     }
@@ -55,9 +58,6 @@
         border-color: #2CA58D;
         background-color: $mainDarkColor;
         color: $mainLightColor;
-        // display: flex;
-        justify-content: center;
-        align-items: center;
       }
 
       img{
@@ -65,7 +65,6 @@
         height: auto;
         padding: 2vh;
         align-items: center;
-
         
         &:hover{
           background: #2CA58D;
