--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -5,11 +5,12 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: center;
 
   .title{
     font-size: 4vh;
     font-weight: 600;
     margin-bottom: 1vh;
+    text-decoration: underline;
+    text-decoration-color: #f05f95;
   }
 }
