--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -4,13 +4,95 @@
   color: $mainLightColor;
   display: flex;
   flex-direction: column;
-  text-align: center;
-  justify-content: center;
+  align-items: center;
 
   .title{
     font-size: 4vh;
     font-weight: 600;
-    margin-bottom: 1vh;
+    text-decoration: underline;
+    text-decoration-color: #f05f95;
+    height: 7.5vh;
+    width: 30vw;
+    text-align: center;
+
+    p{
+      font-size: 4vh;
+    }
   }
-  
+
+  p{
+    font-size: 2vh;
+  }
+
+  h2{
+    font-weight: 500;
+    font-size: 2.75vh;
+    padding-bottom: 2vh;
+    text-decoration: underline;
+    text-decoration-color: #2CA58D;
+  }
+
+  .container{
+    display:flex;
+    flex-flow:column;
+    align-items:center;
+    max-width:100vw;
+    width:auto;
+    margin:0 auto;
+
+    .projectWrapper{
+      position:relative;
+      margin:50px 0 45px;
+
+      .project{
+        display:inline-flex;
+        flex:1 1;
+        margin:0 10vw;
+        border-radius:10px;
+        padding-bottom: 5vh;
+        background-color: rgba(255, 253, 247, 0.25);
+        padding: 2vh;
+        margin-bottom: 2vh;
+        max-height: 35vh;
+
+        .projectLink{
+          display:flex;
+          flex-flow:column;
+          width:30vw;
+          height:auto;
+          border-radius:10px;
+          overflow:hidden;
+          text-decoration:none;
+          justify-content: center;
+
+          .projectGif{
+            border-style: solid;
+            border-color: #2CA58D;
+            border-radius: 1vh;
+
+          }
+          #bankTechTest{
+            zoom: 1.48;
+            height: 75%;
+            overflow: hidden;
+          }
+        }
+
+        .projectInfo{
+          text-align: justify;
+          align-content: center;
+          width: 50vw;
+          margin-top: 3vh;
+          padding: 3vh;
+          justify-content: center;
+        }
+      }
+    }
+
+  img {
+    display: block;
+    width: 30vw;
+    height: 30vh;
+  }
+}
 }
