--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -29,7 +29,7 @@
     font-size: 2.75vh;
     padding-bottom: 2vh;
     text-decoration: underline;
-    text-decoration-color: #2CA58D;
+    text-decoration-color: #2CA58D
   }
 
   .container{
@@ -53,7 +53,7 @@
         background-color: rgba(255, 253, 247, 0.25);
         padding: 2vh;
         margin-bottom: 2vh;
-        max-height: 35vh;
+        max-height: 31vh;
 
         .projectLink{
           display:flex;
@@ -69,11 +69,37 @@
             border-style: solid;
             border-color: #2CA58D;
             border-radius: 1vh;
+            transition: all 1s ease;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: $mainLightColor;
+            position: relative;
+
+            h5{
+              position: absolute;
+              font-size: 3vh;
+              z-index: -1;
+
+            }
+
+            &:hover{
+              background-color: $mainDarkColor;
+              img{
+                opacity: 0.3;
+                z-index: 0;
+              }
+              h5{
+                z-index: 1;
+                font-size: 5vh;
+              }
+            }
 
           }
           #bankTechTest{
-            zoom: 1.48;
-            height: 75%;
+            zoom: 1.0;
+            height: 100%;
             overflow: hidden;
           }
         }
