--- a/src/app.scss
+++ b/src/app.scss
@@ -42,7 +42,7 @@ html,body{
 
     > *{
       width: 100vw;
-      height: calc(100vh);
+      min-height: 110vh;
       scroll-snap-align: start;
     }
   }
