--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -50,13 +50,14 @@
       }
 
       button{
-        width: 150px;
-        height: 30px;
+        width: 10vw;
+        height: 4vh;
         color: $mainDarkColor;
         background-color:$mainLightColor;
         border: none;
         border-radius: 15px;
         font-weight: 700;
+        font-size: 2.5vh;
         cursor: pointer;
         transition: all 1s ease;
 
